--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
   <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
+  <div id="titleScreen" class="title-backdrop">
+    <div class="tittle-screen">
+      <h1>HACK THE GRID</h1>
+      <p class="title-sub">
+        A minimalist circuit puzzle. Rotate the tiles. Connect the signal. Gain access. 
+      </p>
+      <div class="title-btn">
+        <button id="playBtn" class="btn">Play</button>
+        <button id="titleHelpBtn" class="btn secondary">How to Play</button>
+      </div>
+    </div>
+  </div>
+
   <header class="app-header">
     <h1>HACK THE GRID</h1>
-    <p class="subtitle">Rotate the circuit tiles to connect <span class="green">SOURCE</span> to <span class="pink">TARGET</span>.</p>
+    <p class="subtitle">
+      Rotate the circuit tiles to connect 
+      <span class="green">SOURCE</span> to 
+      <span class="pink">TARGET</span>.
+    </p>
   </header>
 
   <main class="app">
