--- a/index.html
+++ b/index.html
@@ -3,105 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <title>Hack the Grid</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
-  <div id="titleScreen" class="title-backdrop">
-    <div class="tittle-screen">
-      <h1>HACK THE GRID</h1>
-      <p class="title-sub">
-        A minimalist circuit puzzle. Rotate the tiles. Connect the signal. Gain access. 
-      </p>
-      <div class="title-btn">
-        <button id="playBtn" class="btn">Play</button>
-        <button id="titleHelpBtn" class="btn secondary">How to Play</button>
-      </div>
-    </div>
+  <div id="ui">
+    <h1>Hack the Grid</h1>
+    <p>Click tiles to rotate. Connect <span class="start">START</span> to <span class="goal">GOAL</span>.</p>
+    <button id="resetButton">Reset</button>
+    <div id="status"></div>
   </div>
 
-  <header class="app-header">
-    <h1>HACK THE GRID</h1>
-    <p class="subtitle">
-      Rotate the circuit tiles to connect 
-      <span class="green">SOURCE</span> to 
-      <span class="pink">TARGET</span>.
-    </p>
-  </header>
+  <div id="game-container"></div>
 
-  <main class="app">
-    <section id="hud" class="hud">
-      <div class="hud-left">
-        <div id="level" class="hud-level">Level 1: Tutorial</div>
-        <div id="status" class="hud-status">
-          Connect <strong>GREEN</strong> to <strong>PINK</strong>.
-        </div>
-      </div>
-
-      <div class="hud-right">
-        <div class="hud-stat">
-          <span class="label">Moves</span>
-          <span id="moves" class="value">0</span>
-        </div>
-        <div class="hud-stat">
-          <span class="label">Time</span>
-          <span id="time" class="value">0.0s</span>
-        </div>
-        <div class="hud-stat">
-          <span class="label">Par</span>
-          <span id="par" class="value">-</span>
-        </div>
-      </div>
-    </section>
-
-    <section class="controls">
-      <button id="prevLevelBtn" class="btn secondary">◀ Prev</button>
-      <button id="resetBtn" class="btn">Shuffle</button>
-      <button id="nextLevelBtn" class="btn secondary">Next ▶</button>
-      <button id="helpBtn" class="btn secondary">How to Play</button>
-    </section>
-
-    <section id="gridContainer" class="grid-container">
-      <div id="grid" class="grid"></div>
-    </section>
-
-    <div id="howToMode" class="modal-backdrop hidden">
-      <div class="modal">
-        <div class="modal-header">
-          <h2>How to Play</h2>
-          <button id="closeModalBtn" class="icon-btn" aria-label="Close">
-            ✕
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>
-            Your goal is to create a continuous circuit from the
-            <span class="accent-green">SOURCE</span> (green) to the
-            <span class="accent-pink">TARGET</span> (pink).
-          </p>
-          <ul>
-            <li>Click on a tile to rotate it 90° clockwise.</li>
-            <li>You <strong>cannot</strong> rotate the source, target, or faded empty tiles.</li>
-            <li>When a valid path exists, the connected tiles will glow and access is granted.</li>
-          </ul>
-          <p>
-            Try to solve each level in as few moves as possible —
-            beat or match the <strong>Par</strong> shown in the HUD.
-          </p>
-        </div>
-        <div class="modal-footer">
-          <button id="gotItBtn" class="btn">Got it</button>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <footer class="app-footer">
-    <span>Made with HTML, CSS &amp; JavaScript</span>
-  </footer>
-
-  <!-- Scripts -->
-  <script src="src/js/levels.js" defer></script>
-  <script src="src/js/game.js" defer></script>
+  <!-- Three.js as ES module -->
+  <script type="module" src="src/js/game.js"></script>
 </body>
 </html>
