Game style updates

--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
   <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
+  <!-- START MENU OVERLAY -->
+  <div id="startOverlay" class="overlay">
+    <div class="overlay-panel">
+      <div class="overlay-title">HACK THE GRID/div>
+      <p class="overlay-tagline">Minimal cyber-puzzle. Neon clean. Brain sharp.</p>
+
+      <ul class="overlay-features">
+        <li>Connect nodes with clean glowing paths.</li>
+        <li>Rotate tiles to align every active node.</li>
+        <li>Beat the clock as difficulty ramps up.</li>
+      </ul>
+
+      <button id="startBtn" class="btn overlay-start-btn">
+        ✦ START HACK
+      </button>
+
+      <p class="overlay-sub">Use mouse / trackpad · Rotate glowing tiles · Win before time hits zero.</p>
+    </div>
+  </div>
+
   <div class="app-shell">
     <div class="app-inner">
       <!-- HEADER / HUD -->
@@ -19,7 +39,7 @@
         <div class="brand-block">
           <div class="brand-icon"></div>
           <div class="brand-text">
-            <h1>Hack-the-Grid</h1>
+            <h1>HACK THE GRID</h1>
             <span>Minimal cyber-puzzle</span>
           </div>
         </div>
